--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   get_it: ^7.7.0
   flutter_dotenv: ^5.1.0
   shared_preferences: ^2.3.2
+  http: ^1.4.0
 
 dev_dependencies:
   flutter_test:
